Fix unwanted horizontal scroll on small screens

--- a/application/layouts/application/default.theme/css/application.css
+++ b/application/layouts/application/default.theme/css/application.css
@@ -72,13 +72,20 @@ body::before {
 
 @media (max-width: 640px) {
 
+   .app-content-wrapper {
+      margin-top: 0;
+   }
+
    .app-content {
       padding-top: 60px;
       border-radius: 0;
    }
 
-   .app-content-wrapper {
-      margin-top: 0;
+   .app-footer {
+      padding-left: 5px;
+      padding-right: 5px;
+      margin-left: 0;
+      margin-right: 0;
    }
 
    body > div > div.container {
